                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET
 - 28-08-2006 changed: reintroduced forcing of iso/udf disc handling due to popular demand. use <detectasudf>true</detectasudf> in advancedsettings.xml.
 - 28-08-2006 fixed: Temperature units weren't displayed.
 - 27-08-2006 fixed: [ 1546191 ] Music file extensions with 2 chars
 - 27-08-2006 fixed: thumbnail generation of cbr/cbz files.
 - 27-08-2006 fixed: stored rared files in directories inside the archive would fail to open.
 - 27-08-2008 fixed: imdb lookups would truncate half listed movies if filename contained a year. 
                     code expects last part of title to contain year ex "Movie Name (2000)", if this changes, scraper should generate a year xml tag
 - 27-08-2006 added: all strings are now localizable. there are about 150 new strings to translate. final call to all translators, have a blast! :)
 - 27-08-2006 fixed: [ 1530771 ] "Open tray" problem
 - 27-08-2006 changed: you can now have okay/cancel buttons in the lock dialog. skinners are free to update if they feel like it. id 28=okay, id 29=cancel.
 - 27-08-2006 changed: dialog.close builtin now takes an additional true parameter to force the closing (no anims etc).
 - 27-08-2006 fixed: Very short songs were often cut short when played with paplayer (meaning no sound at all).
 - 26-08-2006 added: Flicker Filter Xbe Patcher.  Based on hargle and VooD Win32 Flicker Filter XBE Patcher http://xbox.nugnugnug.com/FlickerFucker/
		     settings - my Programs - auto flicker filter patch on/off     
		     will always create a patched _ffp.xbe, the default will not touched
		     ff patcher uses the flicker filter setting in XBMC settings