@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET
+ - 29-08-2006 added: Clean Video Database.  Removes all http, ftp, removable media + files that no longer exist from the database.
+ - 29-08-2006 changed: GetMatchingShare() looks for names before it tries paths.
  - 28-08-2006 changed: reintroduced forcing of iso/udf disc handling due to popular demand. use <detectasudf>true</detectasudf> in advancedsettings.xml.
  - 28-08-2006 fixed: Temperature units weren't displayed.
  - 27-08-2006 fixed: [ 1546191 ] Music file extensions with 2 chars
